<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Talks</string>
    <string name="app_info_message">DEMO APP. Version 1.4 (release-20210529)</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="info">Info</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="invalid_name">Invalid name. At least 4 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password. At least 8 characters</string>
    <string name="invalid_username">Invalid username. At least 4 characters in a–z 0–9</string>
    <string name="invalid_username_already_used">Invalid username. Already used</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="name">Name</string>
    <string name="verified_badge">Verified badge user</string>
    <string name="dot">·</string>
    <string name="lbl_source">Source:</string>
    <string name="photo">Photo</string>
    <string name="comment">Comment</string>
    <string name="retweet">Retweet</string>
    <string name="like">Like</string>
    <string name="tweet">Tweet</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="your_account">Your account</string>
    <string name="insert_small_bio">Insert a small profile biography here</string>
    <string name="edit_account">Edit account</string>
    <string name="add_photo">Add photo</string>
    <string name="edit_photo">Edit photo</string>
    <string name="logout">Logout</string>
    <string name="save_account">Save account</string>
    <string name="edit_your_account">Edit your account</string>
    <string name="edit_account_completed">Account info changed</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="insert_8_char">Insert at least 8 character</string>
    <string name="insert_a_valid_link">Insert a valid link</string>
    <string name="take_picture">Take a picture now</string>
    <string name="take_photo_from_gallery">Take photo from gallery</string>
    <string name="add_source_for_this_tweet">Add a link</string>
    <string name="fail_to_open_camera">Can\'t open camera to take picture</string>
    <string name="check_internet_connection">Please, check your internet connection</string>
    <string name="login">Login</string>
    <string name="enter_in_your_account">Enter in your account</string>
    <string name="email_or_password_wrong">Email or password wrong</string>
    <string name="reset_password">Reset password email</string>
    <string name="reset_password_instruction">You will receive an email to reset your password</string>
    <string name="upload_image_failed">Failed to upload the image, try again</string>
    <string name="upload_image_succes">Image upload confirmed</string>
    <string name="tweet_posted">Tweet posted!!!</string>
    <string name="today">Today</string>
    <string name="my_tweets">My tweets</string>
    <string name="no_tweets">No tweets here yet…</string>
    <string name="search">Search</string>
</resources>